# co-philosopher

./: .env.example  .gitignore  .mcp.json  HOW_TO_RUN_CLAUDE.md  Makefile  PLAN.md  README.md  REPORT.md  cophilo  modal_gpu_example.py  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
.claude/hooks/: post-bash.sh  post-edit.sh  pre-bash.sh  pre-write.sh  stop.sh
.githooks/: commit-msg  pre-commit  pre-push
data/: journals.yaml
src/cophilo/: backup.py  cli.py  config.py  tui.py
src/cophilo/biblio/: __init__.py  philarchive.py  schemas.py  synthesize.py
src/cophilo/biblio/prompts/en/: synthesize.md
src/cophilo/biblio/prompts/fr/: synthesize.md
src/cophilo/db/: models.py  schema.sql
src/cophilo/draft/: __init__.py  compose.py  propose.py  render_tex.py  schemas.py
src/cophilo/draft/prompts/en/: draft.md  propose.md
src/cophilo/draft/prompts/fr/: draft.md  propose.md
src/cophilo/extract/: claude.py  passes.py  schemas.py  segment.py
src/cophilo/extract/prompts/en/: concepts.md  questions.md
src/cophilo/extract/prompts/fr/: concepts.md  questions.md
src/cophilo/ingest/: dispatch.py  docx.py  md.py  normalize.py  pdf.py  tex.py
src/cophilo/memory/: __init__.py  embed.py  index.py  journals.py  mcp_server.py  store.py
src/cophilo/notes/: __init__.py  capture.py  schemas.py
src/cophilo/notes/prompts/en/: socratic.md
src/cophilo/notes/prompts/fr/: socratic.md
src/cophilo/review/: __init__.py  annotate.py  runner.py  schemas.py
src/cophilo/review/prompts/en/: respond.md  review.md
src/cophilo/review/prompts/fr/: respond.md  review.md
tests/: test_backup.py  test_biblio.py  test_claude_cli.py  test_dialog.py  test_draft.py  test_extract.py  test_graph.py  test_ingest.py  test_memory.py  test_review.py  test_tui.py
tests/fixtures/: philarchive_free_will.rss
