[project]
name = "cophilo"
version = "0.1.0"
description = "Co-philosopher: interactive philosophy assistant — ingest articles and notes, extract concepts and questions, render annotated text."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Silvère Gangloff" }]

dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "python-frontmatter>=1.1",
  "python-slugify>=8.0",
  "pyyaml>=6.0",
  "lingua-language-detector>=2.0",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "pypandoc>=1.13",
  "anthropic>=0.40",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
embed = [
  "openai>=1.30",
  "sqlite-vec>=0.1.3",
  "numpy>=1.26",
  "scikit-learn>=1.4",
]
# Local semantic memory: sqlite-vec store + offline ONNX embeddings
# (fastembed pulls onnxruntime, not torch) exposed to Claude Code over MCP.
memory = [
  "sqlite-vec>=0.1.3",
  "numpy>=1.26",
  "fastembed>=0.4",
  "mcp>=1.2",
]

[project.scripts]
cophilo = "cophilo.cli:app"
cophilo-memory-mcp = "cophilo.memory.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cophilo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: Typer's argument/option declarations are calls-in-defaults by design.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
